The calculator works!

--- a/style.css
+++ b/style.css
@@ -152,6 +152,23 @@ figcaption {
     display: none;
 }
 
+.peapod.active,
+.freshdirect.active,
+.amazon.active{
+    display: block;
+}
+
+.cheap{
+    font-weight: bold;
+    font-size: 2em;
+    color: rgb(13, 92, 13);
+}
+
+.cheap::after{
+    font-family: FontAwesome;
+    content: "\f00c"
+}
+
 
 /**
 * Remove  the  default margin on the H3
